# lycento-sdk-rust

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  publish.yml
examples/: basic_usage.rs
src/: client.rs  device.rs  errors.rs  lib.rs
