[package]
name = "lycento-sdk"
version = "1.0.0"
edition = "2021"
description = "Official Lycento SDK for software licensing"
license = "MIT"
authors = ["Lycento"]
repository = "https://github.com/ForEachCodeBrasil/lycento-sdk-rust"
homepage = "https://github.com/ForEachCodeBrasil/lycento-sdk-rust"
documentation = "https://docs.rs/lycento-sdk"
readme = "README.md"
keywords = ["lycento", "licensing", "license", "software", "activation", "validation"]
categories = ["api-bindings", "authentication"]
rust-version = "1.70"

[dependencies]
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
anyhow = "1.0"
sha2 = "0.10"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
sys-info = "0.9"
log = "0.4"
once_cell = "1.19"

[dev-dependencies]
tokio-test = "0.4"
mockito = "1.6"

[features]
default = ["reqwest/default-tls"]
rustls-tls = ["reqwest/rustls-tls-native-roots"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
